# Ju

./: .gitignore  .solitarc.js  Anchor.toml  README.MD  package.json
js/: .ammanrc.js  .gitignore  .prettierrc.js  .solitarc.js  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.build.json  typedoc.json
js/docs/: index.html  modules.html
js/idl/: ju_core.json
programs/collecting-processor/: Cargo.toml
programs/connecting-processor/: Cargo.toml
programs/ju-core/: Cargo.toml
programs/ju-core/src/: constants.rs  errors.rs  events.rs  instructions.rs  lib.rs  state.rs  utils.rs
programs/publishing-processor/: Cargo.toml
programs/publishing-processor/src/: lib.rs
programs/referencing-processor/: Cargo.toml
programs/referencing-processor/src/: lib.rs
programs/registering-processor/: Cargo.toml
programs/registering-processor/src/: lib.rs
tests/: ju-core.spec.ts  ju-core.ts  utils.spec.ts
