[package]
name = "ju-core"
version = "1.3.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ju_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []


[dependencies]
solana-program = "1.14.13"
anchor-lang = "0.27.0"
registering-processor = { path = "../registering-processor", features = ["cpi"]}
connecting-processor = { path = "../connecting-processor", features = ["cpi"]}
publishing-processor = { path = "../publishing-processor", features = ["cpi"]}
collecting-processor = { path = "../collecting-processor", features = ["cpi"]}
referencing-processor = { path = "../referencing-processor", features = ["cpi"]}